tooling/nargo_cli/tests/snapshots/execution_success/databus_two_calldata/execute__tests__databus_two_calldata_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: true
exit_code: 0
----- stdout -----
[databus_two_calldata] Circuit output: Vec([Field(1), Field(5), Field(9), Field(7)])
----- stderr -----
