tooling/nargo_cli/tests/snapshots/execution_success/databus_two_calldata/execute__tests__force_brillig_false_inliner_0.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: artifact
---
{
  "noir_version": "[noir_version]",
  "hash": "[hash]",
  "abi": {
    "parameters": [
      {
        "name": "x",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "private"
      },
      {
        "name": "y",
        "type": {
          "kind": "array",
          "length": 3,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "databus"
      },
      {
        "name": "z",
        "type": {
          "kind": "array",
          "length": 4,
          "type": {
            "kind": "integer",
            "sign": "unsigned",
            "width": 32
          }
        },
        "visibility": "databus"
      }
    ],
    "return_type": {
      "abi_type": {
        "kind": "array",
        "length": 4,
        "type": {
          "kind": "integer",
          "sign": "unsigned",
          "width": 32
        }
      },
      "visibility": "databus"
    },
    "error_types": {
      "5019202896831570965": {
        "error_kind": "string",
        "string": "attempt to add with overflow"
      },
      "14225679739041873922": {
        "error_kind": "string",
        "string": "Index out of bounds"
      }
    }
  },
  "bytecode": [
    "func 0",
    "current witness index : _32",
    "private parameters indices : [_0, _1, _2, _3, _4, _5, _6, _7, _8, _9, _10]",
    "public parameters indices : []",
    "return value indices : []",
    "BLACKBOX::RANGE [(_4, 32)] []",
    "BLACKBOX::RANGE [(_5, 32)] []",
    "BLACKBOX::RANGE [(_6, 32)] []",
    "BLACKBOX::RANGE [(_7, 32)] []",
    "BLACKBOX::RANGE [(_8, 32)] []",
    "BLACKBOX::RANGE [(_9, 32)] []",
    "BLACKBOX::RANGE [(_10, 32)] []",
    "INIT CALLDATA 0 (id: 3, len: 3, witnesses: [_4, _5, _6])",
    "MEM (id: 3, read at: EXPR [ (1, _0) 0 ], value: EXPR [ (1, _15) 0 ]) ",
    "INIT CALLDATA 1 (id: 5, len: 4, witnesses: [_7, _8, _9, _10])",
    "MEM (id: 5, read at: EXPR [ (1, _0) 0 ], value: EXPR [ (1, _16) 0 ]) ",
    "EXPR [ (1, _15) (1, _16) (-1, _17) 0 ]",
    "BLACKBOX::RANGE [(_17, 32)] []",
    "EXPR [ (-1, _18) 0 ]",
    "INIT (id: 6, len: 4, witnesses: [_18, _18, _18, _18])",
    "MEM (id: 6, write EXPR [ (1, _17) 0 ] at: EXPR [ (1, _0) 0 ]) ",
    "MEM (id: 3, read at: EXPR [ (1, _1) 0 ], value: EXPR [ (1, _19) 0 ]) ",
    "MEM (id: 5, read at: EXPR [ (1, _1) 0 ], value: EXPR [ (1, _20) 0 ]) ",
    "EXPR [ (1, _19) (1, _20) (-1, _21) 0 ]",
    "BLACKBOX::RANGE [(_21, 32)] []",
    "MEM (id: 6, write EXPR [ (1, _21) 0 ] at: EXPR [ (1, _1) 0 ]) ",
    "MEM (id: 3, read at: EXPR [ (1, _2) 0 ], value: EXPR [ (1, _22) 0 ]) ",
    "MEM (id: 5, read at: EXPR [ (1, _2) 0 ], value: EXPR [ (1, _23) 0 ]) ",
    "EXPR [ (1, _22) (1, _23) (-1, _24) 0 ]",
    "BLACKBOX::RANGE [(_24, 32)] []",
    "MEM (id: 6, write EXPR [ (1, _24) 0 ] at: EXPR [ (1, _2) 0 ]) ",
    "MEM (id: 5, read at: EXPR [ (1, _3) 0 ], value: EXPR [ (1, _25) 0 ]) ",
    "MEM (id: 6, write EXPR [ (1, _25) 0 ] at: EXPR [ (1, _3) 0 ]) ",
    "MEM (id: 6, read at: EXPR [ (1, _18) 0 ], value: EXPR [ (1, _26) 0 ]) ",
    "EXPR [ (-1, _27) 1 ]",
    "MEM (id: 6, read at: EXPR [ (1, _27) 0 ], value: EXPR [ (1, _28) 0 ]) ",
    "EXPR [ (-1, _29) 2 ]",
    "MEM (id: 6, read at: EXPR [ (1, _29) 0 ], value: EXPR [ (1, _30) 0 ]) ",
    "EXPR [ (-1, _31) 3 ]",
    "MEM (id: 6, read at: EXPR [ (1, _31) 0 ], value: EXPR [ (1, _32) 0 ]) ",
    "EXPR [ (1, _11) (-1, _26) 0 ]",
    "EXPR [ (1, _12) (-1, _28) 0 ]",
    "EXPR [ (1, _13) (-1, _30) 0 ]",
    "EXPR [ (1, _14) (-1, _32) 0 ]",
    "INIT RETURNDATA (id: 4, len: 4, witnesses: [_11, _12, _13, _14])"
  ],
  "debug_symbols": "[debug_symbols]",
  "file_map": "[file_map]",
  "names": [
    "main"
  ],
  "brillig_names": []
}
