tooling/nargo_cli/tests/snapshots/execution_success/databus_two_calldata/execute__tests__stdout.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stdout
---
brillig(inline) fn main f0 {
  b0(v0: [u32; 4], v2: [u32; 3], v3: [u32; 4]):
    v1 = allocate -> &mut [u32; 4]
    store v0 at v1
    (no terminator instruction)
}
[databus_two_calldata] Circuit output: [1, 5, 9, 7]
